--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- navbar -->
     <nav class="navbar">
       <div class="logo-container">
-          <img src="./website/assets/images/logoo.png" alt="Spicy Bite Logo" class="logo">
+          <img src="website/assets/images/logoo.png" alt="Spicy Bite Logo" class="logo">
           <h1 class="site-name">SPICY BITE</h1>
       </div>
       <ul class="nav-links">
@@ -146,40 +146,40 @@
 <div class="scrollable-images">
     <div class="image-container">
         <div class="image-item">
-            <img src="./website/assets/images/dinner1.jpg" alt="Image 1">
+            <img src="website/assets/images/dinner1.jpg" alt="Image 1">
             <span>Dinner</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/instant2.webp" alt="Image 4">
+             src="website/assets/images/instant2.webp" alt="Image 4">
             <span>Instant Pot</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/easy3.jpg" alt="Image 2">
+            <img src="website/assets/images/easy3.jpg" alt="Image 2">
             <span>Easy</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/healthy4.jpg" alt="Image 3">
+            <img src="website/assets/images/healthy4.jpg" alt="Image 3">
             <span>Healthy</span>
         </div>
 
         <div class="image-item">
-            <img src="./website/assets/images/Vegetarian5.webp" alt="Image 5">
+            <img src="website/assets/images/Vegetarian5.webp" alt="Image 5">
             <span>Vegetarian</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/Vegan6.jpg" alt="Image 6">
+            <img src="website/assets/images/Vegan6.jpg" alt="Image 6">
             <span>Vegan</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/soup7.jpg" alt="Image 7">
+            <img src="website/assets/images/soup7.jpg" alt="Image 7">
             <span>Soups</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/salad8.jpg" alt="Image 8">
+            <img src="website/assets/images/salad8.jpg" alt="Image 8">
             <span>Salad</span>
         </div>
         <div class="image-item">
-            <img src="./website/assets/images/mealprep.webp" alt="Image 9">
+            <img src="website/assets/images/mealprep.webp" alt="Image 9">
             <span>Meal Prep</span>
         </div></div></div>
    <!-- Scrollable images section end -->
@@ -299,8 +299,8 @@
         </div>
         <!-- <button class="learn-more-btn">Learn More</button> -->
     </div>
-    <img src="./website/assets/images/team1.jpg" alt="Image 2">
-    <img src="./website/assets/images/team2.webp" alt="Image 3">
+    <img src="website/assets/images/team1.jpg" alt="Image 2">
+    <img src="website/assets/images/team2.webp" alt="Image 3">
 </div>
 
 
@@ -339,27 +339,34 @@
 <!-- add rec end -->
  
 <!--follow us -->
-<section class="cta-section">
-    <div class="cta-content">
-      <div class="social-menu">
-        <p>Follow Us</p>
-        <ul>
-            <li><a href="https://instagram.com" class="instagram"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a></li>
-            <li><a href="https://facebook.com" class="facebook"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a></li>
-          </ul>
-      </div>
-      <div class="email-signup">
-        <p><span>Sign Up</span> for Email Updates</p>
-        <form>
-          <input type="text" placeholder="First Name" required>
-          <input type="email" placeholder="Email" required>
-          <button type="submit">Go</button>
-        </form>
-      </div>
+<div class="start-sec-two">
+
+    <div class="icon-div">
+<h3>Follow us</h3>
+<div class="icon1 face"> <i class="fa-brands fa-facebook-f"></i></div>
+<div class="icon1 start-insta"> <i class="fa-brands fa-instagram"></i></div>
+<div class="icon1 pin"> <i class="fa-brands fa-pinterest-p "></i></div>
+<div class="icon1 twitt"><i class="fa-brands fa-twitter"></i></div>
+
+ <!-- <i class="fa-brands fa-x-twitter"></i> -->
     </div>
-  </section> 
+
+    <div class="start-form">
+        <h1 class="let-span start-signup"> <span > signup</span> for Email Updates </h1>
+        
+        <br>
+        <form action="" class="form-div">
+            <input type="text" class="start-input" placeholder="Enter Name" >
+            <input type="email" class="start-input start-email" placeholder="Enter Email"  >
+            <input type="button" value="GO" class="start-btn-go">
+
+        </form>
+       
+
+    </div>
+   <!-- start-sec-three closing -->
+</div> 
+
   <!--follow us end -->
 
 <!-- Footer Section -->
@@ -367,7 +374,7 @@
   <div class="footer-container">
     <div class="footer-logo">
       <div class="logo-content">
-        <img src="./website/assets/images/logoo.png" alt="Logo" class="logo-img">
+        <img src="website/assets/images/logoo.png" alt="Logo" class="logo-img">
         <div class="logo-text">
           <h2 class="logo-title">Spicy Bites</h2>
           <p class="logo-description">
