--- a/Website/about.html
+++ b/Website/about.html
@@ -84,7 +84,27 @@
   </div>
 </section> 
 
-
+<section class="cta-section">
+  <div class="cta-content">
+    <div class="social-menu">
+      <p>Follow Us</p>
+      <ul>
+          <li><a href="https://instagram.com" class="instagram"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a></li>
+          <li><a href="https://facebook.com" class="facebook"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a></li>
+        </ul>
+    </div>
+    <div class="email-signup">
+      <p><span>Sign Up</span> for Email Updates</p>
+      <form>
+        <input type="text" placeholder="First Name" required>
+        <input type="email" placeholder="Email" required>
+        <button type="submit">Go</button>
+      </form>
+    </div>
+  </div>
+</section> 
 
 
 
@@ -131,7 +151,7 @@ Our passionate team of chefs, food enthusiasts, and spice lovers work together t
 
               <div class="info">
                  <h2 class="name">Rameesha</h2>
-                 <p class="bio"> Our team leader, managing the Home, Profile, and Contact pages to create a seamless user experience </p>
+                 <p class="bio"> Our team leader, managing the Home, Profile, Contact pages & Firebase to create a seamless user experience </p>
 
                  <div class="team_icon">
                      <i class="fa-brands fa-facebook-f"></i>
@@ -176,29 +196,9 @@ Our passionate team of chefs, food enthusiasts, and spice lovers work together t
     
 <br>
 <br>
-<section class="cta-section">
-  <div class="cta-content">
-    <div class="social-menu">
-      <p>Follow Us</p>
-      <ul>
-          <li><a href="https://instagram.com" class="instagram"><i class="fa-brands fa-instagram"></i></a></li>
-          <li><a href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a></li>
-          <li><a href="https://facebook.com" class="facebook"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a></li>
-        </ul>
-    </div>
-    <div class="email-signup">
-      <p><span>Sign Up</span> for Email Updates</p>
-      <form>
-        <input type="text" placeholder="First Name" required>
-        <input type="email" placeholder="Email" required>
-        <button type="submit">Go</button>
-      </form>
-    </div>
-  </div>
-</section> 
+
 <!-- Footer Section -->
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
         <div class="logo-content">
@@ -233,7 +233,7 @@ Our passionate team of chefs, food enthusiasts, and spice lovers work together t
     <div class="footer-bottom">
       <p>&copy; 2025 Spicy Bites. All rights reserved.</p>
     </div>
-  </footer>
+  </footer> -->
   <!-- footer end -->
   
 <script>
