--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <span>Dinner</span>
         </div>
         <div class="image-item">
-             src="website/assets/images/instant2.webp" alt="Image 4">
+           <img  src="website/assets/images/instant2.webp" alt="Image 4">
             <span>Instant Pot</span>
         </div>
         <div class="image-item">
