--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
         <br>
         <div class="banner">
-            <img src="./website/assets/images/col2.jpg" alt="Banner">
+            <img src="Website/assets/images/col2.jpg" alt="Banner">
             <p class="banner-text"></p>
         </div>
     </div>
@@ -299,8 +299,8 @@
         </div>
         <!-- <button class="learn-more-btn">Learn More</button> -->
     </div>
-    <img src="website/assets/images/team1.jpg" alt="Image 2">
-    <img src="website/assets/images/team2.webp" alt="Image 3">
+    <img src="Website/assets/images/team1.jpg" alt="Image 2">
+    <img src="Website/assets/images/team2.webp" alt="Image 3">
 </div>
 
 
@@ -374,7 +374,7 @@
   <div class="footer-container">
     <div class="footer-logo">
       <div class="logo-content">
-        <img src="website/assets/images/logoo.png" alt="Logo" class="logo-img">
+        <img src="Website/assets/images/logoo.png" alt="Logo" class="logo-img">
         <div class="logo-text">
           <h2 class="logo-title">Spicy Bites</h2>
           <p class="logo-description">
