--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
   <div class="footer-container">
     <div class="footer-logo">
       <div class="logo-content">
-        <img src="Website/assets/images/logoo.png" alt="Logo" class="logo-img">
+        <img src="./Website/assets/images/logoo.png" alt="Logo" class="logo-img">
         <div class="logo-text">
           <h2 class="logo-title">Spicy Bites</h2>
           <p class="logo-description">
