--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
           <li><a href="./Website/menu.html">Our Menu</a></li>
           <li><a href="./Website/starthere.html">Start Here</a></li>
           <li><a href="./Website/starthere.html">Contact</a></li>
+                    <li><a href="./Website/profile.html">profile</a></li>
+
       </ul>
       <div class="hamburger" onclick="toggleMenu()">
           <span></span>
