--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
           <li><a href="./Website/starthere.html">Contact</a></li>
           
                     <li><a href="./Website/profile.html">profile</a></li>
+                    <li><a href="./Dashboard/index.html">Dashboard</a></li>
+
 
       </ul>
       <div class="hamburger" onclick="toggleMenu()">
