--- a/Website/profile.html
+++ b/Website/profile.html
@@ -286,7 +286,7 @@ font-family: "Protest Revolution", sans-serif;
                 }
             } else {
                 // Redirect to home page if not logged in
-                window.location.href = 'home.html';
+                window.location.href = 'index.html';
             }
         });
 
