--- a/Website/profile.html
+++ b/Website/profile.html
@@ -294,7 +294,7 @@ font-family: "Protest Revolution", sans-serif;
         logoutBtn.addEventListener("click", async () => {
             try {
                 await signOut(auth);
-                window.location.href = '/';
+                window.location.href = 'index.html';
             } catch (error) {
                 console.log("Error signing out:", error.message);
             }
