--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <li><a href="./Website/about.html">About</a></li>
           <li><a href="./Website/menu.html">Our Menu</a></li>
           <li><a href="./Website/starthere.html">Start Here</a></li>
-          <li><a href="./Website/starthere.html">Contact</a></li>
+          <li><a href="./Website/contact.html">Contact</a></li>
           
                     <li><a href="./Website/profile.html">profile</a></li>
                     <li><a href="./Dashboard/index.html">Dashboard</a></li>
