--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -75,12 +75,26 @@
                     <p>$5.99</p>
                 </div>
                 <div class="menu-item">
-                    <img src="assets/images/pizza.jpg" alt="Pizza">
+                    <img src="assets/images/piza.jpg" alt="Pizza">
                     <h3>Pizza</h3>
                     <p>$9.99</p>
                 </div>
                 <div class="menu-item">
-                    <img src="assets/images/pasta.jpg" alt="Pasta">
+                    <img src="assets/images/Cheesecake.webp" alt="Pasta">
+                    <h3>Pasta</h3>
+                    <p>$7.99</p>
+                </div>   <div class="menu-item">
+                    <img src="assets/images/chowmein.jpg" alt="Pasta">
+                    <h3>Pasta</h3>
+                    <p>$7.99</p>
+                </div>
+                <div class="menu-item">
+                    <img src="assets/images/dinner1.jpg" alt="Pasta">
+                    <h3>Pasta</h3>
+                    <p>$7.99</p>
+                </div>
+                <div class="menu-item">
+                    <img src="assets/images/birpost.webp" alt="Pasta">
                     <h3>Pasta</h3>
                     <p>$7.99</p>
                 </div>
