--- a/Website/contact.html
+++ b/Website/contact.html
@@ -177,7 +177,7 @@
 
 .contact-info {
     width: 45%;
-    background-color: #f4f4f4;
+    background-color: #e7f7e4;
     border-radius: 15px;
     padding: 30px 40px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -525,6 +525,7 @@
             <li><a href="menu.html">Our Menu</a></li>
             <li><a href="starthere.html">Start Here</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="profile.html">profile</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
             <span></span>
