--- a/Website/starthere.html
+++ b/Website/starthere.html
@@ -53,6 +53,7 @@
       <li><a href="menu.html">Our Menu</a></li>
       <li><a href="starthere.html">Start Here</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="profile.html">profile</a></li>
   </ul>
   <div class="hamburger" onclick="toggleMenu()">
       <span></span>
