--- a/Website/profile.html
+++ b/Website/profile.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -241,7 +239,7 @@ font-family: "Protest Revolution", sans-serif;
  
        <!-- Banner Image -->
        <div style="position: relative;">
-        <img src="assets/images/bgpro.avif" alt="Banner" class="banner-image">
+        <img src="assets/images/profile3.jpg" alt="Banner" class="banner-image">
         
         <div class="avatar" id="user-avatar" >?</div>
     </div>
