--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <div class="overlay" id="overlay">
     <div class="card">
         <button class="close-btn" id="close-card">&times;</button>
-        <h2>Sign Up</h2>
+        <h2><i class="fas fa-user-plus"></i>Sign Up</h2>
         <p>Please enter your details to sign up.</p>
         <form id="signup-form">
             <div class="input-group">
@@ -75,7 +75,7 @@
 <div class="overlay" id="login-overlay">
     <div class="card">
         <button class="close-btn" id="close-login">&times;</button>
-        <h2>Sign In</h2>
+        <h2><i class="fas fa-user-plus"> </i>Sign In</h2>
         <p>Enter your credentials to log in.</p>
         <form id="login-form">
             <div class="input-group">
@@ -113,7 +113,7 @@
           <li><a href="./Website/contact.html">Contact</a></li>
           
                     <li><a href="./Website/profile.html">profile</a></li>
-                    <li><a href="./Dashboard/index.html">Dashboard</a></li>
+                    <li><a href="./Dashboard/index.html"> <i class="fas fa-tachometer-alt"></i></a></li>
 
 
       </ul>
