--- a/Website/profile.html
+++ b/Website/profile.html
@@ -180,8 +180,9 @@ font-family: "Protest Revolution", sans-serif;
 
        #user-avatar{
         width: 120px; height: 120px; font-size: 48px; position: absolute; top: 230px; left: 50%; transform: translateX(-50%);
-      background-color: #fcff4d;
-      color: green;
+      background-color: green; 
+      color: #fcff4d;
+      border: 6px solid #f8fc01;
     }
         .user-info {
             background: rgb(255, 255, 255);
