--- a/Website/menu.html
+++ b/Website/menu.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Categories</title>
+    <link rel="shortcut icon" href="./assets/images/logoo.png" type="image/x-icon">
     <!-- font family one -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
