--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
           <li><a href="./Website/menu.html">Our Menu</a></li>
           <li><a href="./Website/starthere.html">Start Here</a></li>
           <li><a href="./Website/contact.html">Contact</a></li>
-          
-                    <li><a href="./Website/profile.html">profile</a></li>
-                    <li><a href="./Dashboard/index.html"> <i class="fas fa-tachometer-alt"></i></a></li>
+          <li><a href="./Website/profile.html">profile</a></li>
+          <li><a href="./Website/search.html"> <i class="fa fa-search"></i></a></li>
+         <li><a href="./Dashboard/index.html"> <i class="fas fa-tachometer-alt"></i></a></li>
 
 
       </ul>
