--- a/Website/profile.html
+++ b/Website/profile.html
@@ -301,21 +301,66 @@ font-family: "Protest Revolution", sans-serif;
         });
 
 
-        // navbr functionality
-        function toggleMenu() {
-      document.querySelector(".nav-links").classList.toggle("active");
-    }
-    window.addEventListener("resize", function() {
+
+// navbar click
+
+function toggleMenu() {
+  document.querySelector(".nav-links").classList.toggle("active");
+}
+window.addEventListener("resize", function() {
   if (window.innerWidth <= 768) {
       document.querySelector(".logo-container").style.justifyContent = "flex-start";
   } else {
       document.querySelector(".logo-container").style.justifyContent = "center";
   }
 });
+// navbar end
+
+// Navbar Avatar 
+const navbar = document.querySelector(".navbar");
+
+
+const avatarContainer = document.createElement("div");
+avatarContainer.id = "user-avatar";
+avatarContainer.style.cursor = "pointer";
+// avatarContainer.style.background = "#ff9800";
+avatarContainer.style.background = "#ffe604fb";
+avatarContainer.style.color = "rgb(28, 78, 8)";
+avatarContainer.style.width = "40px";
+avatarContainer.style.height = "40px";
+avatarContainer.style.display = "flex";
+avatarContainer.style.alignItems = "center";
+avatarContainer.style.justifyContent = "center";
+avatarContainer.style.borderRadius = "50%";
+
+
+const navbarRight = document.createElement("div");
+navbarRight.classList.add("navbar-right");
+
+navbarRight.appendChild(document.querySelector(".hamburger"));
+navbarRight.appendChild(avatarContainer);
+
+navbar.appendChild(navbarRight);
+//  Authentication 
+onAuthStateChanged(auth, async (user) => {
+    if (user) {
+        const email = user.email;
+        const firstLetter = email.charAt(0).toUpperCase();
+        avatarContainer.textContent = firstLetter;
+        avatarContainer.addEventListener("click", () => {
+            window.location.href = "profile.html";
+        });
+    } else {
+        avatarContainer.style.display = "none";
+    }
+});
 
 
     </script>
-     <script type="module" src="firebase.js"></script>
-     <script type="module" src="script.js"></script>
+
+
+    </script>
+    <script type="module" src="firebase.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
