--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+    <title>Spicy Bites</title>
     <link rel="shortcut icon" href="./Website/assets/images/logoo.png" type="image/x-icon">
     <!-- style.css -->
      <link rel="stylesheet" href="./Website/assets/css/style.css">
