--- a/Website/about.html
+++ b/Website/about.html
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Birthstone+Bounce:wght@400;500&family=Noto+Sans+PhagsPa&family=Playwrite+GB+S&family=Ysabeau+SC:wght@1..1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-    <title>About Us</title>
+    <title>Spicy Bites</title>
 </head>
   <body>
 
