--- a/Website/about.html
+++ b/Website/about.html
@@ -76,7 +76,7 @@
 <div class="lemon"></div>
 <div class="lemon"></div>
 <div class="chocolate"></div>
-<h1> OUR PRODUCTS </h1>
+<h1> OUR FOOD GALLERY </h1>
 
 <div class="cards">
 
